--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -28,7 +29,8 @@
                 android:id="@+id/brand_image"
                 style="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                 android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_180sdp"
+                android:layout_height="0dp"
+                android:maxHeight="@dimen/_180sdp"
                 android:layout_margin="@dimen/_4sdp"
                 android:src="@drawable/logo"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -44,38 +46,59 @@
                 android:layout_margin="@dimen/_4sdp"
                 android:text="@{itemModel.itemSearch.name}"
                 android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/black"
-                app:layout_constraintEnd_toStartOf="@+id/brand_name"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/brand_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/brand_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_4sdp"
-                android:text="@{itemModel.itemSearch.brand.name}"
-                android:textAlignment="viewStart"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_8ssp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/product_desc"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_margin="@dimen/_4sdp"
-                android:text="@{itemModel.itemSearch.description}"
-                android:textAlignment="viewStart"
-                android:textColor="@color/darkGray"
-                android:textSize="@dimen/_10ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="wrap_content"
+                android:text="@{itemModel.itemSearch.brand.name}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/white"
+                app:backgroundTint="@color/colorAccentDark"
+                tools:text="Samsoung" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/product_cm"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{itemModel.getCm(context)}"
+                android:textAlignment="center"
+                app:backgroundTint="@color/colorPrimaryDark"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/white"
+                tools:text="Samsoung" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/product_inch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{itemModel.getInch(context)}"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="@color/white"
+                tools:text="Samsoung" />
+
+            <androidx.constraintlayout.helper.widget.Flow
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_8sdp"
+                app:constraint_referenced_ids="product_cm,product_inch,brand_name"
+                app:flow_horizontalAlign="start"
+                app:flow_horizontalBias="0"
+                app:flow_horizontalGap="@dimen/_4sdp"
+                app:flow_horizontalStyle="spread_inside"
+                app:flow_maxElementsWrap="2"
+                app:flow_wrapMode="chain"
+                app:flow_verticalStyle="packed"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/brand_image"
-                app:layout_constraintTop_toBottomOf="@+id/product_name" />
-
+                app:layout_constraintTop_toBottomOf="@id/product_name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
